Education section complete

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -19,3 +19,11 @@
             {{> portfolio}}
 
 </div>
+
+<div class="grid-container">
+	<section class="grid-x" id="education">
+
+		{{> education}}
+
+	</section>
+</div>
