--- a/src/pages/project/bib92.html
+++ b/src/pages/project/bib92.html
@@ -5,7 +5,7 @@ layout: modal
 <div class="cell small-12 project-details-content">
 
 	<header class="grid-x align-center project-details-title">
-		<h4>Bib92</h4>
+		<h4>BiB92</h4>
 	</header>
 
 	<main class="grid-x">
@@ -16,31 +16,31 @@ layout: modal
 				    <ul class="orbit-container">
 				    	<li class="is-active orbit-slide">
 					        <figure class="orbit-figure">
-					          <img class="orbit-image" src="{{root}}/assets/img/project/bib92/screen-bib92-1.png" alt="Site bib92">
+					          <img class="orbit-image" src="assets/img/project/bib92/screen-bib92-1.jpg" alt="Screeshot du Site bib92">
 				        	</figure>
 							</li>
 				    	<li class="orbit-slide">
 					        <figure class="orbit-figure">
-					          <img class="orbit-image" src="{{root}}/assets/img/project/bib92/screen-bib92-2.png" alt="Site bib92">
+					          <img class="orbit-image" src="assets/img/project/bib92/screen-bib92-2.jpg" alt="Screeshot du Site bib92">
 				        	</figure>
 							</li>
 				    	<li class="orbit-slide">
 					        <figure class="orbit-figure">
-					          <img class="orbit-image" src="{{root}}/assets/img/project/bib92/screen-bib92-3.png" alt="Site bib92">
+					          <img class="orbit-image" src="assets/img/project/bib92/screen-bib92-3.jpg" alt="Screeshot du Site bib92">
 				        	</figure>
 							</li>
 				    	<li class="orbit-slide">
 					        <figure class="orbit-figure">
-					          <img class="orbit-image" src="{{root}}/assets/img/project/bib92/screen-bib92-4.png" alt="Site bib92">
+					          <img class="orbit-image" src="assets/img/project/bib92/screen-bib92-4.jpg" alt="Screeshot du Site bib92">
 				        	</figure>
 						</li>
 					</ul>
 				</div>
 				<nav class="orbit-bullets">
-					<button class="is-active" data-slide="0"><img class="thumbnail" src="{{root}}/assets/img/project/bib92/screen-bib92-1.png" alt="Site bib92"></button>
-					<button data-slide="1"><img class="thumbnail" src="{{root}}/assets/img/project/bib92/screen-bib92-2.png" alt="Site bib92"></button>
-					<button data-slide="2"><img class="thumbnail" src="{{root}}/assets/img/project/bib92/screen-bib92-3.png" alt="Site bib92"></button>
-					<button data-slide="3"><img class="thumbnail" src="{{root}}/assets/img/project/bib92/screen-bib92-4.png" alt="Site bib92"></button>
+					<button class="is-active" data-slide="0"><img class="thumbnail" src="assets/img/project/bib92/screen-bib92-1.jpg" alt="Screeshot du Site bib92"></button>
+					<button data-slide="1"><img class="thumbnail" src="assets/img/project/bib92/screen-bib92-2.jpg" alt="Screeshot du Site bib92"></button>
+					<button data-slide="2"><img class="thumbnail" src="assets/img/project/bib92/screen-bib92-3.jpg" alt="Screeshot du Site bib92"></button>
+					<button data-slide="3"><img class="thumbnail" src="assets/img/project/bib92/screen-bib92-4.jpg" alt="Screeshot du Site bib92"></button>
 				</nav>
 			</div>
 		</div>
@@ -48,23 +48,27 @@ layout: modal
 		<div class="cell small-12 medium-4 project-details-description">
 			<div class="grid-y">
 				<div class="project-details-text">
+					<h5>Le projet</h5>
 					<p>
-						Ego vero sic intellego, Patres conscripti, nos hoc tempore in provinciis decernendis perpetuae pacis habere oportere rationem. Nam quis hoc non sentit omnia alia esse nobis vacua ab omni periculo atque etiam suspicione belli?
+						Projet initié en concertation avec l'association des bibliothèques des Hauts-de-Seine <i>BiB92</i>.
+						L'objectif est de refondre intégralement un site obsolète et vulnérable en terme de sécurité tout en conservant les données.
 					</p>
 					<p>
-						Ego vero sic intellego, Patres conscripti, nos hoc tempore in provinciis decernendis perpetuae pacis habere oportere rationem. Nam quis hoc non sentit omnia alia esse nobis vacua ab omni periculo atque etiam suspicione belli?
+						<strong>Travail effectué :</strong>
+						Conception et développement d'un template responsive pour le CMS <i>Joomla</i>.
+						Conseils, migration des données, graphisme, intégration, déploiement et maintenance.
 					</p>
-					<p>
-						Ego vero sic intellego, Patres conscripti, nos hoc tempore in provinciis decernendis perpetuae pacis habere oportere rationem. Nam quis hoc non sentit omnia alia esse nobis vacua ab omni periculo atque etiam suspicione belli?
-					</p>
-
 				</div>
 				<div class="project-details-technology">
 					<h5>Technologies</h5>
 					<ul>
+						<li>Joomla 3</li>
 						<li>HTML/CSS</li>
-						<li>PHP</li>
-						<li>Symfony</li>
+						<li>Bootstrap 3</li>
+						<li>Less</li>
+						<li>PHP/MySQL</li>
+						<li>jQuery/jQuery UI</li>
+						<li>Twitter API</li>
 					</ul>
 				</div>
 			</div>
@@ -72,7 +76,8 @@ layout: modal
 	</main>
 
 <footer class="grid-x align-center project-details-title">
-	<button class="button"><i class="fas fa-link" aria-hidden="true"></i>Site</button><button class="button"><i class="fab fa-github" aria-hidden="true"></i>Code</button>
+	<a href="http://www.bib92.org/"><button class="button"><i class="fas fa-link" aria-hidden="true"></i>Site</button></a>
+	<a href="https://github.com/RomainRouault/JoomlaTemplateBs3forB92"><button class="button"><i class="fab fa-github" aria-hidden="true"></i>Code</button></a>
 </footer>
 
 </div>
